# chatbot-rag

./: README.md  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: poetry_dependencies.mdc  task_completion.mdc  task_context.mdc
backend/: package.json
backend/python_modules/: README.md  chatbot_cli.py  data_importer.py  execute_migration.py  test_agent_runner.py  verify_tables.py
backend/python_modules/src/: __init__.py  cli.py  main.py  test_agent.py
backend/python_modules/src/config/: __init__.py  environment.py
backend/python_modules/src/migrations/: 001_initial_schema.sql  README.md  apply_migrations.py
backend/python_modules/src/services/: __init__.py  agent.py  database.py
backend/python_modules/src/tools/: README.md  __init__.py  data_importer.py  data_processor.py
backend/python_modules/tests/: __init__.py  test_data_processor.py  test_environment.py  test_migration_sql.py
backend/src/config/: environment.js
backend/src/services/: database.js
data/processed/: courses.json  lessons.json
docs/: supabase-project-info.md
docs/external_docs/: openai_sdk.md  openrouter_doc.md
docs/instructions/: agents_overview.txt  database-schema.md  project_briefing.md  project_structure.md
docs/internal_docs/: cursos_classplay.csv
frontend/: .env.example
frontend/src/services/: supabase.js
scripts/: PRD.txt
